--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.2.6
 djangorestframework==3.16.1
+django-filter==23.3
 django-cors-headers==4.7.0
 psycopg2-binary==2.9.7
 dj-database-url==2.1.0
