--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,55 @@ on:
     branches: [ main, develop ]
 
 jobs:
+  lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+    
+    - name: Install Python dependencies
+      run: |
+        cd backend
+        pip install -r requirements.txt
+    
+    - name: Install Node.js dependencies
+      run: |
+        cd frontend
+        npm ci
+    
+    - name: Run backend linting
+      run: |
+        echo "Running backend linting checks..."
+        cd backend
+        python -m black --check --diff .
+        python -m isort --check-only --diff .
+        python -m flake8 .
+    
+    - name: Run frontend linting
+      run: |
+        echo "Running frontend linting checks..."
+        cd frontend
+        npm run lint
+        npm run format:check
+
   test:
     name: Run Docker Tests
     runs-on: ubuntu-latest
+    needs: lint
     
     steps:
     - name: Checkout code
