Fix broken local docker file due to cypress

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "cypress run",
-    "e2e:open": "cypress open",
+    "e2e": "./scripts/cypress-docker.sh run",
+    "e2e:open": "./scripts/cypress-docker.sh run open",
+    "e2e:fast": "./scripts/cypress-docker.sh run fast",
+    "e2e:auth": "./scripts/cypress-docker.sh run fast",
     "e2e:headless": "cypress run --headless",
-    "e2e:fast": "cypress run --headless --browser electron --spec cypress/e2e/01-authentication.cy.ts",
-    "e2e:auth": "cypress run --spec cypress/e2e/01-authentication.cy.ts",
+    "docker:start": "./scripts/cypress-docker.sh start",
+    "docker:stop": "./scripts/cypress-docker.sh stop",
+    "docker:clean": "./scripts/cypress-docker.sh clean",
     "lint": "eslint . --ext .ts,.html",
     "lint:fix": "eslint . --ext .ts,.html --fix",
     "format": "prettier --write \"src/**/*.{ts,html,scss,css,json}\"",
